@@ -122,6 +122,7 @@ test_that("Distances from formulas", {
                       .00001)) # there is some rounding error, but it is small
 
   # factor-related
+  f0 <- as.factor(rep(1:4, each=n/4))
   f1 <- as.factor(rep(rep(1:2, each=2),n/4))
   f2 <- as.factor(rep(3:4, each=n/2))
   # first, set up test that options are properly reset on exit from the function
@@ -129,6 +130,9 @@ test_that("Distances from formulas", {
   options(contrasts=rep("foo", 2))
   # Euclidean distances on a single factor should be 1 or 0
   expect_true(all(match_on(Z~f1, method="euclidean") %in% 0:1))
+  expect_true(all(round(euclid2 <- match_on(Z~f0, method="euclidean")) %in% 0:1))
+  # (with >=2 levels, small numerical differences from 1)
+  expect_true(all(abs(euclid2 - round(euclid2))<.00001))
   # now check that the options were restored      
   expect_equal(getOption("contrasts"), rep("foo", 2))
   options(contrasts=current.c)
@@ -141,7 +145,10 @@ test_that("Distances from formulas", {
   expect_true(all(abs(match_on(Z ~ X1 + X2 + B, method = compute_euclidean) - euclid) <
     .00001)) # there is some rounding error, but it is small
 
+  # Mahalanobis distances involving factors 
 
+  expect_equal(as.matrix(match_on(Z~as.numeric(f1), method="mahalanobis")), as.matrix(match_on(Z~f1, method="mahalanobis")))
+  
   # excluding matches combined with a formula
   stratify <- exactMatch(Z ~ B)
   res.strat <- match_on(Z ~ X1 + X2, within = stratify)
